fix white space

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+}
 
 .velkommen{
     color: black;
